Support deleting status updates
